Fix improper slide menu rendering on IE10/11

--- a/charat2/static/css/newparp.css
+++ b/charat2/static/css/newparp.css
@@ -2022,6 +2022,11 @@ section > .close:first-child { float: right; margin: 5px; }
 #global_navigation .mobile_nav_button:active, #global_navigation .mobile_nav_link_button:active {padding-left:8px;padding-right:6px}
 
 
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+	/* fix slide menu rendering weirdness on IE11 */
+	.mobile_nav_wrap {transform:translateZ(0px);}
+}
+
 @supports ( (transform: translateX(1px)) or (-webkit-transform:translateX(1px)) )  {
 	/* this is ugly, but the chat is otherwise unusable on severely antiquated browsers */
 	.mobile_nav_wrap {-webkit-transform:translateX(-100%);transform:translateX(-100%);transition: transform .3s ease-in-out; width:270px;padding:5px;overflow:auto; background:#eee;border-right:2px solid #999;color:#535353;}
